--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "langchain": "^0.1.37"
+    "dotenv": "^16.4.5",
+    "langchain": "^0.1.37",
+    "web-streams-polyfill": "^4.0.0"
   }
 }
