--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "langchain": "^0.1.37",
-    "web-streams-polyfill": "^4.0.0"
+    "web-streams-polyfill": "^4.0.0",
+    "zod": "^3.23.8"
   }
 }
