--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
+    "ignore": "^5.3.1",
     "langchain": "^0.1.37",
+    "pdf-parse": "^1.1.1",
     "web-streams-polyfill": "^4.0.0",
     "zod": "^3.23.8"
   }
