--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.2.3",
+    "@langchain/openai": "^0.0.33",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
+    "faiss-node": "^0.5.1",
     "ignore": "^5.3.1",
-    "langchain": "^0.1.37",
+    "langchain": "^0.2.2",
     "pdf-parse": "^1.1.1",
     "web-streams-polyfill": "^4.0.0",
     "zod": "^3.23.8"
