--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "faiss-node": "^0.5.1",
     "ignore": "^5.3.1",
     "langchain": "^0.2.2",
+    "langsmith": "^0.4.12",
     "pdf-parse": "^1.1.1",
     "web-streams-polyfill": "^4.0.0",
     "zod": "^3.23.8"
